--- a/archives/toutiao-search/2023-10-05.md
+++ b/archives/toutiao-search/2023-10-05.md
@@ -1,57 +1,76 @@
 # 2023-10-05
 
-共 148 条
+共 164 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Oct 05 2023 10:15:59 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Oct 05 2023 11:01:01 GMT+0800 (China Standard Time) -->
 1. [中国男篮再负菲律宾该由谁背锅](https://so.toutiao.com/search?keyword=中国男篮再负菲律宾该由谁背锅)
-1. [中方：菲律宾4艘船非法侵闯仁爱礁](https://so.toutiao.com/search?keyword=中方：菲律宾4艘船非法侵闯仁爱礁)
+1. [姚明就男篮一度取消赛后发布会道歉](https://so.toutiao.com/search?keyword=姚明就男篮一度取消赛后发布会道歉)
 1. [公交车上的医院助力亚运医疗保障](https://so.toutiao.com/search?keyword=公交车上的医院助力亚运医疗保障)
 1. [徐静雨怒斥男篮主帅：立即下课](https://so.toutiao.com/search?keyword=徐静雨怒斥男篮主帅：立即下课)
-1. [日本开始第二轮核污染水排海](https://so.toutiao.com/search?keyword=日本开始第二轮核污染水排海)
+1. [亚运会“加油鸭”受到运动员欢迎](https://so.toutiao.com/search?keyword=亚运会“加油鸭”受到运动员欢迎)
+1. [中方：菲律宾4艘船非法侵闯仁爱礁](https://so.toutiao.com/search?keyword=中方：菲律宾4艘船非法侵闯仁爱礁)
 1. [超市歇业通知：女儿亚运会收获两金](https://so.toutiao.com/search?keyword=超市歇业通知：女儿亚运会收获两金)
-1. [中国男篮世界杯、亚运遭菲律宾双杀](https://so.toutiao.com/search?keyword=中国男篮世界杯、亚运遭菲律宾双杀)
-1. [七国集团就援助乌克兰达成一致](https://so.toutiao.com/search?keyword=七国集团就援助乌克兰达成一致)
+1. [中国田径19金11银9铜亚运收官](https://so.toutiao.com/search?keyword=中国田径19金11银9铜亚运收官)
 1. [10月15日起全面禁止校外培训？假的](https://so.toutiao.com/search?keyword=10月15日起全面禁止校外培训？假的)
-1. [运营方回应“停车7168天需缴14万”](https://so.toutiao.com/search?keyword=运营方回应“停车7168天需缴14万”)
+1. [“大聪明们”又堵路上了](https://so.toutiao.com/search?keyword=“大聪明们”又堵路上了)
+1. [日本开始第二轮核污染水排海](https://so.toutiao.com/search?keyword=日本开始第二轮核污染水排海)
 1. [哈尔滨房企组团到南京卖房0成交](https://so.toutiao.com/search?keyword=哈尔滨房企组团到南京卖房0成交)
+1. [外国人：美面对华为芯片像疯了一样](https://so.toutiao.com/search?keyword=外国人：美面对华为芯片像疯了一样)
+1. [男子晒花生10分钟被鸟吃光](https://so.toutiao.com/search?keyword=男子晒花生10分钟被鸟吃光)
+1. [获诺贝尔化学奖的量子点是什么](https://so.toutiao.com/search?keyword=获诺贝尔化学奖的量子点是什么)
+1. [七国集团就援助乌克兰达成一致](https://so.toutiao.com/search?keyword=七国集团就援助乌克兰达成一致)
+1. [台媒关注大陆提“完全统一”](https://so.toutiao.com/search?keyword=台媒关注大陆提“完全统一”)
+1. [美媒：麦卡锡被罢免或现更大混乱](https://so.toutiao.com/search?keyword=美媒：麦卡锡被罢免或现更大混乱)
+1. [射击冠军张博文：手插裤兜是在捏自己](https://so.toutiao.com/search?keyword=射击冠军张博文：手插裤兜是在捏自己)
+1. [王仕鹏：怕男篮这批孩子站不起来了](https://so.toutiao.com/search?keyword=王仕鹏：怕男篮这批孩子站不起来了)
+1. [Angelababy方回应被封杀传闻](https://so.toutiao.com/search?keyword=Angelababy方回应被封杀传闻)
+1. [官方回应彩票中奖者身份遭质疑](https://so.toutiao.com/search?keyword=官方回应彩票中奖者身份遭质疑)
+1. [美媒：美将向乌提供截获的伊朗军火](https://so.toutiao.com/search?keyword=美媒：美将向乌提供截获的伊朗军火)
+1. [南阳市民拿探测仪帮迷笛粉丝找手机](https://so.toutiao.com/search?keyword=南阳市民拿探测仪帮迷笛粉丝找手机)
+1. [全红婵陈芋汐回应被称“天才少女”](https://so.toutiao.com/search?keyword=全红婵陈芋汐回应被称“天才少女”)
+1. [网友国庆收8张请帖：扛不住了](https://so.toutiao.com/search?keyword=网友国庆收8张请帖：扛不住了)
+1. [弟弟结婚董宇辉回家帮忙成碍眼包](https://so.toutiao.com/search?keyword=弟弟结婚董宇辉回家帮忙成碍眼包)
+1. [10月10日开启第20轮油价调整窗口](https://so.toutiao.com/search?keyword=10月10日开启第20轮油价调整窗口)
+1. [泰国拥枪率在亚洲排名第二](https://so.toutiao.com/search?keyword=泰国拥枪率在亚洲排名第二)
+1. [甄妮喊话郑少秋多关心郑欣宜](https://so.toutiao.com/search?keyword=甄妮喊话郑少秋多关心郑欣宜)
+1. [金价下降有人一口气买走百万元金条](https://so.toutiao.com/search?keyword=金价下降有人一口气买走百万元金条)
+1. [泰国枪击案死伤中国游客为免签入境](https://so.toutiao.com/search?keyword=泰国枪击案死伤中国游客为免签入境)
+1. [乔帅：姚明是中国篮球真正的领导者](https://so.toutiao.com/search?keyword=乔帅：姚明是中国篮球真正的领导者)
+1. [奶奶给孙子零花钱接头动作亮了](https://so.toutiao.com/search?keyword=奶奶给孙子零花钱接头动作亮了)
+1. [泰国总理已致电中国大使道歉](https://so.toutiao.com/search?keyword=泰国总理已致电中国大使道歉)
+1. [三位科学家获2023诺贝尔化学奖](https://so.toutiao.com/search?keyword=三位科学家获2023诺贝尔化学奖)
+1. [谁将接替麦卡锡出任美众议院议长](https://so.toutiao.com/search?keyword=谁将接替麦卡锡出任美众议院议长)
+1. [博物馆网红“无语菩萨”火出圈](https://so.toutiao.com/search?keyword=博物馆网红“无语菩萨”火出圈)
+1. [沙特将申办2034年世界杯](https://so.toutiao.com/search?keyword=沙特将申办2034年世界杯)
+1. [邵新宇任湖北省常务副省长](https://so.toutiao.com/search?keyword=邵新宇任湖北省常务副省长)
+1. [婚礼现场新娘沉浸式“搂席”](https://so.toutiao.com/search?keyword=婚礼现场新娘沉浸式“搂席”)
+1. [中央气象台继续发布大风黄色预警](https://so.toutiao.com/search?keyword=中央气象台继续发布大风黄色预警)
+1. [意大利一特技演员破吉尼斯世界纪录](https://so.toutiao.com/search?keyword=意大利一特技演员破吉尼斯世界纪录)
+1. [苹果CEO套现近3亿元](https://so.toutiao.com/search?keyword=苹果CEO套现近3亿元)
+1. [男子投喂熊猫被终身禁入成都基地](https://so.toutiao.com/search?keyword=男子投喂熊猫被终身禁入成都基地)
+1. [伊朗军演模拟“全面的无人机战争”](https://so.toutiao.com/search?keyword=伊朗军演模拟“全面的无人机战争”)
+1. [男子凌晨遭人撬锁被撒不明物](https://so.toutiao.com/search?keyword=男子凌晨遭人撬锁被撒不明物)
+1. [北约：西方已没有足够弹药提供给乌](https://so.toutiao.com/search?keyword=北约：西方已没有足够弹药提供给乌)
+1. [特朗普被提议参选美国众议长](https://so.toutiao.com/search?keyword=特朗普被提议参选美国众议长)
+1. [我国成功发射遥感三十九号卫星](https://so.toutiao.com/search?keyword=我国成功发射遥感三十九号卫星)
+1. [中国男篮世界杯、亚运遭菲律宾双杀](https://so.toutiao.com/search?keyword=中国男篮世界杯、亚运遭菲律宾双杀)
+1. [运营方回应“停车7168天需缴14万”](https://so.toutiao.com/search?keyword=运营方回应“停车7168天需缴14万”)
 1. [男子下跪献花被女生一脚拦住](https://so.toutiao.com/search?keyword=男子下跪献花被女生一脚拦住)
 1. [菲律宾欲再次挑起“黄岩岛事件”吗](https://so.toutiao.com/search?keyword=菲律宾欲再次挑起“黄岩岛事件”吗)
-1. [甄妮喊话郑少秋多关心郑欣宜](https://so.toutiao.com/search?keyword=甄妮喊话郑少秋多关心郑欣宜)
-1. [台媒关注大陆提“完全统一”](https://so.toutiao.com/search?keyword=台媒关注大陆提“完全统一”)
-1. [男子晒花生10分钟被鸟吃光](https://so.toutiao.com/search?keyword=男子晒花生10分钟被鸟吃光)
 1. [何杰夺得亚运会男子马拉松金牌](https://so.toutiao.com/search?keyword=何杰夺得亚运会男子马拉松金牌)
-1. [获诺贝尔化学奖的量子点是什么](https://so.toutiao.com/search?keyword=获诺贝尔化学奖的量子点是什么)
-1. [外国人：美面对华为芯片像疯了一样](https://so.toutiao.com/search?keyword=外国人：美面对华为芯片像疯了一样)
-1. [苹果CEO套现近3亿元](https://so.toutiao.com/search?keyword=苹果CEO套现近3亿元)
-1. [Angelababy方回应被封杀传闻](https://so.toutiao.com/search?keyword=Angelababy方回应被封杀传闻)
 1. [菲律宾男篮主帅：为球员们感到骄傲](https://so.toutiao.com/search?keyword=菲律宾男篮主帅：为球员们感到骄傲)
-1. [南阳市民拿探测仪帮迷笛粉丝找手机](https://so.toutiao.com/search?keyword=南阳市民拿探测仪帮迷笛粉丝找手机)
-1. [谁将接替麦卡锡出任美众议院议长](https://so.toutiao.com/search?keyword=谁将接替麦卡锡出任美众议院议长)
 1. [陈若琳：从跳水小花到低调教头](https://so.toutiao.com/search?keyword=陈若琳：从跳水小花到低调教头)
-1. [弟弟结婚董宇辉回家帮忙成碍眼包](https://so.toutiao.com/search?keyword=弟弟结婚董宇辉回家帮忙成碍眼包)
 1. [夫妻离婚争人工授精孩子抚养权](https://so.toutiao.com/search?keyword=夫妻离婚争人工授精孩子抚养权)
 1. [太行山景区有游客集体喊“退票”](https://so.toutiao.com/search?keyword=太行山景区有游客集体喊“退票”)
-1. [射击冠军张博文：手插裤兜是在捏自己](https://so.toutiao.com/search?keyword=射击冠军张博文：手插裤兜是在捏自己)
-1. [奶奶给孙子零花钱接头动作亮了](https://so.toutiao.com/search?keyword=奶奶给孙子零花钱接头动作亮了)
-1. [泰国枪击案死伤中国游客为免签入境](https://so.toutiao.com/search?keyword=泰国枪击案死伤中国游客为免签入境)
-1. [泰国拥枪率在亚洲排名第二](https://so.toutiao.com/search?keyword=泰国拥枪率在亚洲排名第二)
-1. [金价下降有人一口气买走百万元金条](https://so.toutiao.com/search?keyword=金价下降有人一口气买走百万元金条)
-1. [泰国总理已致电中国大使道歉](https://so.toutiao.com/search?keyword=泰国总理已致电中国大使道歉)
 1. [为何在亚运会上颁发奥运会奖牌](https://so.toutiao.com/search?keyword=为何在亚运会上颁发奥运会奖牌)
-1. [全红婵陈芋汐回应被称“天才少女”](https://so.toutiao.com/search?keyword=全红婵陈芋汐回应被称“天才少女”)
 1. [麦卡锡被罢免：真相比纸牌屋精彩](https://so.toutiao.com/search?keyword=麦卡锡被罢免：真相比纸牌屋精彩)
 1. [大熊猫渝可和奶妈的双向奔赴](https://so.toutiao.com/search?keyword=大熊猫渝可和奶妈的双向奔赴)
-1. [10月10日开启第20轮油价调整窗口](https://so.toutiao.com/search?keyword=10月10日开启第20轮油价调整窗口)
 1. [线下商超售“酱香拿铁奶茶”引热议](https://so.toutiao.com/search?keyword=线下商超售“酱香拿铁奶茶”引热议)
 1. [网球冠军张之臻：发球是我的武器](https://so.toutiao.com/search?keyword=网球冠军张之臻：发球是我的武器)
 1. [女子三级跳远摘银 曾蕊连说对不起](https://so.toutiao.com/search?keyword=女子三级跳远摘银+曾蕊连说对不起)
 1. [周润发获釜山电影节亚洲电影人奖](https://so.toutiao.com/search?keyword=周润发获釜山电影节亚洲电影人奖)
-1. [三位科学家获2023诺贝尔化学奖](https://so.toutiao.com/search?keyword=三位科学家获2023诺贝尔化学奖)
-1. [沙特将申办2034年世界杯](https://so.toutiao.com/search?keyword=沙特将申办2034年世界杯)
 1. [本届亚运会男子三大球成绩单](https://so.toutiao.com/search?keyword=本届亚运会男子三大球成绩单)
-1. [邵新宇任湖北省常务副省长](https://so.toutiao.com/search?keyword=邵新宇任湖北省常务副省长)
-1. [男子投喂熊猫被终身禁入成都基地](https://so.toutiao.com/search?keyword=男子投喂熊猫被终身禁入成都基地)
 1. [电影《志愿军》章子怡的一滴泪](https://so.toutiao.com/search?keyword=电影《志愿军》章子怡的一滴泪)
 1. [麦迪看中国男篮比赛不理解为何会输](https://so.toutiao.com/search?keyword=麦迪看中国男篮比赛不理解为何会输)
 1. [亚运会发现三例兴奋剂检测阳性](https://so.toutiao.com/search?keyword=亚运会发现三例兴奋剂检测阳性)
@@ -59,14 +78,12 @@
 1. [切阳什姐获颁奥运金牌激动落泪](https://so.toutiao.com/search?keyword=切阳什姐获颁奥运金牌激动落泪)
 1. [亚运会今日看点](https://so.toutiao.com/search?keyword=亚运会今日看点)
 1. [王春雨获铜牌赛后哭着说对不起](https://so.toutiao.com/search?keyword=王春雨获铜牌赛后哭着说对不起)
-1. [王仕鹏：怕男篮这批孩子站不起来了](https://so.toutiao.com/search?keyword=王仕鹏：怕男篮这批孩子站不起来了)
 1. [国庆被人群包围的无语菩萨更无语了](https://so.toutiao.com/search?keyword=国庆被人群包围的无语菩萨更无语了)
 1. [攀岩女子速度接力中国队夺金](https://so.toutiao.com/search?keyword=攀岩女子速度接力中国队夺金)
 1. [切阳什姐一天拿下奥运亚运两枚金牌](https://so.toutiao.com/search?keyword=切阳什姐一天拿下奥运亚运两枚金牌)
 1. [辅导员假借代缴学费骗7学生3万余元](https://so.toutiao.com/search?keyword=辅导员假借代缴学费骗7学生3万余元)
 1. [男子婚礼上让哈士奇送戒指](https://so.toutiao.com/search?keyword=男子婚礼上让哈士奇送戒指)
 1. [卖家回应酱香拿铁饮品“撞脸”瑞幸](https://so.toutiao.com/search?keyword=卖家回应酱香拿铁饮品“撞脸”瑞幸)
-1. [姚明就男篮一度取消赛后发布会道歉](https://so.toutiao.com/search?keyword=姚明就男篮一度取消赛后发布会道歉)
 1. [男子问饭店内顾客好吃吗 回答亮了](https://so.toutiao.com/search?keyword=男子问饭店内顾客好吃吗+回答亮了)
 1. [足球媒体人评中国男篮：彻底男足化](https://so.toutiao.com/search?keyword=足球媒体人评中国男篮：彻底男足化)
 1. [杨毅谈男篮落败：这次真俩眼一摸黑](https://so.toutiao.com/search?keyword=杨毅谈男篮落败：这次真俩眼一摸黑)
@@ -105,7 +122,6 @@
 1. [一对新人定制公交车接亲高调官宣](https://so.toutiao.com/search?keyword=一对新人定制公交车接亲高调官宣)
 1. [上海5日高速路网流量预计达峰值](https://so.toutiao.com/search?keyword=上海5日高速路网流量预计达峰值)
 1. [郑少秋曾坦言对大女儿缺乏照顾](https://so.toutiao.com/search?keyword=郑少秋曾坦言对大女儿缺乏照顾)
-1. [婚礼现场新娘沉浸式“搂席”](https://so.toutiao.com/search?keyword=婚礼现场新娘沉浸式“搂席”)
 1. [假期香港旅游市场多项数据创新高](https://so.toutiao.com/search?keyword=假期香港旅游市场多项数据创新高)
 1. [库克抛售4100万美元苹果股票](https://so.toutiao.com/search?keyword=库克抛售4100万美元苹果股票)
 1. [大爷被穿短裙女子指责看腿后发飙](https://so.toutiao.com/search?keyword=大爷被穿短裙女子指责看腿后发飙)
